--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="boxImg">
-        <img class="firstImg" src="fotos/quadro1.png" alt="">
+        <img class="firstImg" src="quadro1.png" alt="">
     </div>
 
     <div class="boxImg">
-        <img class="firstImg" src="fotos/quadro2.png" alt="">
+        <img class="firstImg" src="quadro2.png" alt="">
     </div>
 
     <div class="boxImg">
-        <img class="firstImg" src="fotos/pesquisaSatisfacaoSemLink.png" alt="">
+        <img class="firstImg" src="pesquisaSatisfacaoSemLink.png" alt="">
         <div class="boxLink">
             <button>
                 <a class="link" href="https://docs.google.com/forms/d/e/1FAIpQLScz9200qedDcHHijGnqRygD4iJYqEt0mvlKItVHMisDPBlarA/viewform?usp=sf_link" target="_blank">Clique aqui para preencher o formulário</a>
