inserting new text

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="textInfos">
+        <h1>QUANDO IR <br> AO DENTISTA</h1>
+    </div>
+    
     <div class="boxImg">
         <img class="firstImg" src="quadro1.png" alt="">
     </div>
